# AutoResumed

./: .gitignore  Containerfile  Dockerfile  LICENSE  README.md  flake.nix  package-lock.json  package.json  pyproject.toml  resume.json  tagged-resume.json  themes.json
.github/workflows/: main.yml
auto_resumed/: autoresumed.py  resumed.py
backend/: __init__.py  app.py  auth.py  db_test.py  dbtest.py  package-lock.json  package.json  pyproject.toml  resume.py  route_test.py  scratches.py  util.py
backend/cli/: autoresumed.py  package-lock.json  resume.json  resumed.py  test.json  tests.py
backend/dbtool/: __init__.py  camel_caser.py  dbtest.py  dbtool.py  dbtools.py  schema.prisma  snakeCaser.py  test.json
cli/: README.md  autoresumed.py  resumed.py  test.json  tests.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  Layout.jsx  LoginPage.jsx  PreviousButton.jsx  RegistrationPage.jsx  UserForm.jsx  Welcome.jsx  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/Pages/: LoginPage.jsx  RegistrationPage.jsx  UserForm.jsx  Welcome.jsx
frontend/src/Utils/: Layout.jsx
infra/: README.md
static-page/: env.js  generate.css  generate.html  generate.js  index.css  index.html  index.js  isAuthorized.js  login.css  login.html  login.js  logout.js  pub.txt  register.css  register.html  register.js  resume.css  resume.html  resume.js  resume.js.save  resume.js.save.1  style.css  styles.css  testResume.json
tools/pdf-export/: default.nix  index.js  package-lock.json  package.json
(+13 files in other folders)
