[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = { version = "^3.0.2", extras = ["async"]}
flask-json = "^0.4.0"
prisma = "^0.12.0"
flask-cors = "^4.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
